--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "lint": "eslint ./src",
     "test": "vitest",
-    "e2e": "cypress run"
+    "e2e": "cypress run",
+    "ci:test": "vitest --no-watch && start-server-and-test dev http-get://0.0.0.0:5173 e2e"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
@@ -41,6 +42,7 @@
     "globals": "^15.10.0",
     "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
+    "start-server-and-test": "^2.0.11",
     "vite": "^6.2.6",
     "vitest": "^3.1.1"
   }
